--- a/Mailer MVVM/packages.config
+++ b/Mailer MVVM/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.ReportViewer.Runtime.Common" version="12.0.2402.15" targetFramework="net461" />
+  <package id="Microsoft.ReportViewer.VS2015.WinForms" version="12.0.2.2402" targetFramework="net461" />
+  <package id="Microsoft.SqlServer.Types" version="14.0.1016.290" targetFramework="net461" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.31" targetFramework="net46" />
 </packages>
